--- a/SportsStore/docker-compose.yml
+++ b/SportsStore/docker-compose.yml
@@ -12,4 +12,4 @@ services:
         image: "mcr.microsoft.com/mssql/server"
         environment:
             SA_PASSWORD: "MyDatabaseSecret123"
-            ACCEPT_EULA: "Y
+            ACCEPT_EULA: "Y"
